Make MathParser#isOperativeSymbol not nullable and temporarily mark with annotation Deprecate Object overload for removal Fix usage that results in NPE (#582)